--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
