--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.0.3",
     "input-otp": "^1.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
     "next": "^14.2.18",
     "next-themes": "^0.4.4",
@@ -67,6 +68,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "autoprefixer": "^10.4.17",
